# algorithms-from-scratch

./: .gitignore  makefile  pyproject.toml
miscellaneous/water_ripples/: README.md  constants.py  pyproject.toml  trapezoid_water_ripples.py  utils_screen.py  vertical_scaling_water_ripples.py  water_ripples.py  water_ripples_in_image.py  water_ripples_trapezoid.py
miscellaneous/water_ripples/data/lake_1/: polygon_coordinates.json
miscellaneous/water_ripples/utils/: get_polygon_coordinates.py  polygon_coordinates_to_mask.py
terrain_generation/perlin_noise/: main.py  pyproject.toml
terrain_generation/perlin_noise/src/perlin_noise/: config_manager.py  config_model.py  constants.py  perlin_noise.py  pn_visualizer.py  utils.py
terrain_generation/perlin_noise/src/perlin_noise/configs/: config.yaml
terrain_generation/perlin_noise/src/perlin_noise/utils/: utils_color.py  utils_pygame.py
terrain_generation/wave_function_collapse/: main.py  pyproject.toml  readme.md
terrain_generation/wave_function_collapse/src/wave_function_collapse/: bitmap.py  config_manager.py  config_model.py  constants.py  grid_cell.py  tile.py  visualizer.py  wfc.py  wfc_visualizer.py
terrain_generation/wave_function_collapse/src/wave_function_collapse/bitmaps/input/: city.xlsx  flowers.xlsx  height_map.xlsx  loop.xlsx  mountains.xlsx  network.xlsx  network_2.xlsx
terrain_generation/wave_function_collapse/src/wave_function_collapse/configs/: config.yaml
terrain_generation/wave_function_collapse/src/wave_function_collapse/utils/: utils_conversion.py  utils_excel.py  utils_pygame.py
