[project]
name = "water-ripples"
version = "0.1.0"
description = "2D water ripples simulation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "numpy>=2.4.3",
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.7",
]
