[project]
name = "perlin-noise"
version = "0.1.0"
description = "Project for visualizing Perlin Noise."
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "numpy>=2.4.4",
    "pydantic>=2.13.2",
    "pygame>=2.6.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "ty>=0.0.31",
]

[tool.ruff.lint]
select = [
    "I",    # isort-style import sorting
    "ANN",  # annotation rules
]

[tool.ruff.lint.isort]
known-first-party = ["src"]